Fix tmux new window directory inheritance

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,7 +45,7 @@ set -g @nova-nerdfonts true
 set -g @nova-nerdfonts-left 
 set -g @nova-nerdfonts-right 
 
-set -g @nova-segment-mode "#{?client_prefix,Ω,x}"
+set -g @nova-segment-mode "#{?client_prefix,Ω,▁██▁}"
 set -g @nova-segment-mode-colors "#6272a4 #282a36"
 
 set -g @nova-segment-whoami "#(whoami)@#h"
@@ -74,10 +74,17 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+unbind -T root C-j
+bind-key -n C-j send-keys C-j
+set -g xterm-keys on
+
 unbind %
 unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
 bind d split-window -v -c "#{pane_current_path}"
+
+# Nueva ventana en el directorio del pane actual
+bind c new-window -c "#{pane_current_path}"
 
 # Mouse support
 set -g mouse on
