--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -74,7 +74,11 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# Quitar bindings molestos de Ctrl+j
 unbind -T root C-j
+unbind -T copy-mode-vi C-j
+
+# Pasar Ctrl+j crudo a la app
 bind-key -n C-j send-keys C-j
 set -g xterm-keys on
 
